@@ -18,6 +18,7 @@
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 
 import os
+
 from ubiquity.filteredcommand import FilteredCommand
 
 class Install(FilteredCommand):
